--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -6,12 +6,21 @@
   <title>Home - Nick Parisi</title>
   <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+  <style>
+    :root {
+        --nc-bg-2: #fafaff;
+		--nc-bg-1: #f8f8ff;
+		--nc-bg-3: #FFBB98;
+		--nc-tx-1: #000000;
+		--nc-tx-2: #000000;
+    }
+  </style>
 </head> 
 <body> 
   <header>
     <img src="/img/yoshi.jpg" width="100" height="100" align="right" > 
 	<h2>Nick Parisi</h2>
-	<a href="/">Home</a> / <a href="/blog">Blog</a>
+	<a href="/"><b>Home</b></a> / <a href="/blog"><b>Blog</b></a>
   </header> 
   <main> 
     {{ content | safe }}
