--- a/blog.njk
+++ b/blog.njk
@@ -8,14 +8,12 @@ pagination:
 ---
 {% for post in posts %}
   <article>
-    <h1>
-      <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-    </h1>
+    <h1>{{ post.data.title }}</h1>
 	<time datetime="{{ post.date | dateIso }}">{{ post.date | dateReadable }}</time>
  	
 	{% excerpt post %}
 
 	<a href="{{ post.url | url }}"
-   		aria-label="Read more on {{ post.data.title }}">Read more</a>
+   		aria-label="Read more on {{ post.data.title }}"><b>Read more</b></a>
  </article>
 {% endfor %}
