--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -13,14 +13,18 @@
 		--nc-bg-3: #FFBB98;
 		--nc-tx-1: #000000;
 		--nc-tx-2: #000000;
+		--nc-lk-1: #FC9420;
     }
   </style>
 </head> 
 <body> 
   <header>
-    <img src="/img/yoshi.jpg" width="100" height="100" align="right" > 
-	<h2>Nick Parisi</h2>
-	<a href="/"><b>Home</b></a> / <a href="/blog"><b>Blog</b></a>
+    <img src="/img/yoshi.jpg" width="100" height="100" align="left" > 
+	<h3 align="right">Nick Parisi</h3>
+	<div align="right">
+		<a href="/">Home</a> / 
+		<a href="/blog">Blog</a> / 
+		<a href="https://github.com/n-parisi">GitHub</a></div>
   </header> 
   <main> 
     {{ content | safe }}
