--- a/blog.njk
+++ b/blog.njk
@@ -2,7 +2,7 @@
 layout: base-layout.njk
 pagination:
   data: collections.post
-  size: 10
+  size: 5
   reverse: true
   alias: posts
 ---
@@ -17,3 +17,13 @@ pagination:
    		aria-label="Read more on {{ post.data.title }}">Read more</a>
  </article>
 {% endfor %}
+<br>
+{% if pagination.href.previous %}
+	<a href="{{ pagination.href.previous }}">Previous</a>
+{% endif %}
+{% if pagination.href.previous and pagination.href.next %}
+	/
+{% endif %}
+{% if pagination.href.next %}
+	<a href="{{ pagination.href.next }}">Next</a>
+{% endif %}
