Fix resource paths in base layout

--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -6,10 +6,10 @@
   <title>{{ title }} - Nick Parisi</title>
   <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
-  <link rel="manifest" href="static/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+  <link rel="manifest" href="/static/site.webmanifest">
   <style>
     :root {
         --nc-bg-2: #fafaff;
@@ -23,7 +23,7 @@
 </head> 
 <body> 
   <header>
-    <img src="/img/yoshi.jpg" width="100" height="100" align="left" > 
+    <img src="/static/yoshi.jpg" width="100" height="100" align="left" > 
 	<h3 align="right">Nick Parisi</h3>
 	<div align="right">
 		<a href="/">Home</a> / 
