--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -3,7 +3,7 @@
 <head> 
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-  <title>{{ title }} - Nick Parisi</title>
+  <title>{{ title }} - Nora Kelly</title>
   <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
@@ -24,17 +24,16 @@
 <body> 
   <header>
     <img src="/static/yoshi.jpg" width="100" height="100" align="left" > 
-	<h3 align="right">Nick Parisi</h3>
+	<h3 align="right">Nora Kelly</h3>
 	<div align="right">
 		<a href="/">Home</a> / 
-		<a href="/blog">Blog</a> / 
 		<a href="https://github.com/n-parisi">GitHub</a></div>
   </header> 
   <main> 
     {{ content | safe }}
   </main> 
   <footer>
-	<p align="right">Copyright &copy; 2021 Nick Parisi</p>
+	<p align="right">Copyright &copy; 2021 Cheech</p> 
   </footer>
 </body> 
 </html>
