--- a/index.njk
+++ b/index.njk
@@ -28,3 +28,14 @@ pagination:
 {% if pagination.href.next %}
 	<a href="{{ pagination.href.next }}">Next</a>
 {% endif %}
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
