Change some colors

--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -13,22 +13,19 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <style>
     :root {
-        --nc-bg-2: #fafaff;
-		--nc-bg-1: #f8f8ff;
+        --nc-bg-2: #8bd8ff;
+		--nc-bg-1: #ffffff;
 		--nc-bg-3: #FFBB98;
-		--nc-tx-1: #000000;
-		--nc-tx-2: #000000;
-		--nc-lk-1: #FC9420;
+		--nc-tx-1: #e182c0;
+		--nc-tx-2: #000080;
+		--nc-lk-1: #000000;
     }
+	h1 { font-family: Brush Script MT, cursive; font-size: 80px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } 
   </style>
 </head> 
 <body> 
   <header>
-    <img src="/static/yoshi.jpg" width="100" height="100" align="left" > 
-	<h3 align="right">Nora Kelly</h3>
-	<div align="right">
-		<a href="/">Home</a> / 
-		<a href="https://github.com/n-parisi">GitHub</a></div>
+	<h1 align="left">From The Desk Of</h3>
   </header> 
   <main> 
     {{ content | safe }}
