--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -6,9 +6,8 @@
   <title>{{ title }} - Nora Kelly</title>
   <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+  <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="static/favicon.ico" type="image/x-icon">
   <link rel="manifest" href="/static/site.webmanifest">
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <style>
