--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -10,6 +10,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
   <link rel="manifest" href="/static/site.webmanifest">
+
+  <meta content="{{ title }}" property="og:title" />
+  <meta content="Site Description" property="og:description" />
+  <meta content="/posts/4/" property="og:url" />
+  <meta content="/static/yoshi.jpg" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
   <style>
     :root {
         --nc-bg-2: #fafaff;
