--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -12,8 +12,7 @@
   <link rel="manifest" href="/static/site.webmanifest">
 
   <meta content="{{ title }}" property="og:title" />
-  <meta content="Site Description" property="og:description" />
-  <meta content="/posts/4/" property="og:url" />
+  <meta content="{{ excerpt }}" property="og:description" />
   <meta content="/static/yoshi.jpg" property="og:image" />
   <meta content="#43B581" data-react-helmet="true" name="theme-color" />
   <style>
